--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/reset.css" />
+
     <title>Nuts-Playground</title>
   </head>
   <body>
-    <p>hello world!</p>
-    <p>hello world!</p>
-    <p>hello world!</p>
-    <p>hello world!</p>
-    <p>hello world!</p>
+    <div id="container">
+      <div class="loginForm">
+        <input type="text" placeholder="아이디" />
+        <input type="password" placeholder="비번" />
+        <button>확인</button>
+      </div>
+      <div id="wrap"></div>
+    </div>
+    <script src="/js/main.js"></script>
   </body>
 </html>
