--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
   </head>
   <body>
     <div id="container">
-      <div class="loginForm">
-        <input type="text" placeholder="아이디" />
-        <input type="password" placeholder="비번" />
-        <button>확인</button>
-      </div>
-      <div id="wrap"></div>
-    </div>
+     <header></header>
+     <main></main>
+     <footer></footer>
+      
     <script src="/js/main.js"></script>
   </body>
 </html>
