--- a/index.html
+++ b/index.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="/css/reset.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+        />
+        <title>Nuts-Playground</title>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <div class="wrap">
+                    <div class="headerWrap flex-box flex-between flex-middle">
+                        <div class="logoWrap">
+                            <img id="logo" src="/images/nuts-logo-noBg.png" alt="logo" />
+                        </div>
+                        <ul id="nav" class="flex-box">
+                            <li class="t_big">Project</li>
+                            <li class="loginBtn ml30 t_big">Login</li>
+                            <li class="ml30 light hide"><span class="material-symbols-outlined"> light_mode </span></li>
+                            <li class="ml30 dark"><span class="material-symbols-outlined"> dark_mode </span></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
 
-    <title>Nuts-Playground</title>
-  </head>
-  <body>
-    <div id="container">
-     <header></header>
-     <main></main>
-     <footer></footer>
-      
-    <script src="/js/main.js"></script>
-  </body>
+            <main>
+                <section id="sectionFirst">
+                    <div id="wrap">
+                        <div class="mainWrap">
+                            <ul class="mainContent">
+                                <li class="mainList"></li>
+                                <li class="mainList"></li>
+                                <li class="mainList"></li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <section id="sectionTwo" style="height: 1000px"></section>
+            </main>
+            <footer></footer>
+            <div id="loginFormModal" class="notVb">
+                <div class="loginBg">
+                    <form class="loginForm t_center">
+                        <h4 class="t_big">로그인</h4>
+                        <input type="text" />
+                    </form>
+                </div>
+            </div>
+            <script src="/js/main.js"></script>
+        </div>
+    </body>
 </html>
