--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 </div>
             </div>
             <script src="/js/main.js"></script>
+            <script src="/js/test.js"></script>
         </div>
     </body>
 </html>
