--- a/index.html
+++ b/index.html
@@ -72,33 +72,56 @@
                         <h2 class="mb30 mt20 t_center">회원 가입</h2>
                         <form>
                             <div class="input-group">
-                                <p>이름</p>
-                                <input class="mb10 mt10" type="text" name="fullname" placeholder="이름" required />
+                                <!-- label for/input id  동일하면 링크걸림 -->
+                                <label for="name">이름</label>
+                                <input
+                                    class="mb10 mt10"
+                                    id="name"
+                                    type="text"
+                                    name="fullname"
+                                    placeholder="이름"
+                                    required
+                                />
                                 <div class="flex-box flex-between flex-middle">
                                     <p class="hide t_danger">올바른 이름이 아닙니다</p>
                                 </div>
                             </div>
                             <div class="input-group">
-                                <p>아이디</p>
-                                <input class="mb10 mt10" type="text" name="email" placeholder="아이디" required />
+                                <label for="userId">아이디</label>
+                                <input
+                                    class="mb10 mt10"
+                                    id="userId"
+                                    type="text"
+                                    name="email"
+                                    placeholder="아이디"
+                                    required
+                                />
                                 <div class="flex-box flex-between flex-middle">
                                     <p class="hide t_danger">올바른 아이디가 아닙니다</p>
                                 </div>
                             </div>
 
                             <div class="input-group">
-                                <p>비밀번호</p>
+                                <label for="userPw">비밀번호</label>
                                 <input
-                                    class="mb10 mt10"
+                                    class="mb10 mt10 joinPwFirst"
+                                    id="userPw"
                                     type="password"
                                     name="password"
                                     placeholder="비밀번호"
                                     required
                                 />
-                                <input type="password" name="password" placeholder="비밀번호 확인" required />
+                                <input
+                                    class="joinPwTwo"
+                                    type="password"
+                                    name="password"
+                                    placeholder="비밀번호 확인"
+                                    required
+                                />
                                 <div class="mt10 flex-box flex-between flex-middle">
-                                    <p class="t_danger"></p>
+                                    <p class="t_danger t_pwCheck"></p>
                                     <input
+                                        class="pwCheck"
                                         type="button"
                                         value="비밀번호 확인"
                                         style="border: 1px solid black !important; font-size: 12px; padding: 2px"
