--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div id="joinFormModal">
+            <div id="joinFormModal hide">
                 <div class="joinBg">
                     <div class="joinForm">
                         <h2 class="mb30 mt20 t_center">회원 가입</h2>
