--- a/index.html
+++ b/index.html
@@ -31,18 +31,15 @@
             </header>
 
             <main>
-                <section id="sectionFirst">
-                    <div id="wrap">
-                        <div class="mainWrap">
-                            <ul class="mainContent">
-                                <li class="mainList"></li>
-                                <li class="mainList"></li>
-                                <li class="mainList"></li>
-                            </ul>
-                        </div>
+                <div class="wrap">
+                    <div style="height: 200px"></div>
+                    <div class="cungcungdda">
+                        <div><span id="order">1</span>번째 참가자</div>
+                        <div>제시어 : <span id="word"></span></div>
+                        <input id="wordInput" type="text" />
+                        <button class="clickBtn">입력</button>
                     </div>
-                </section>
-                <section id="sectionTwo" style="height: 1000px"></section>
+                </div>
             </main>
             <footer></footer>
             <div id="loginFormModal" class="notVb">
@@ -66,13 +63,13 @@
                     </div>
                 </div>
             </div>
-            <div id="joinFormModal hide">
+            <!-- <div id="joinFormModal hide">
                 <div class="joinBg">
                     <div class="joinForm">
                         <h2 class="mb30 mt20 t_center">회원 가입</h2>
                         <form>
                             <div class="input-group">
-                                <!-- label for/input id  동일하면 링크걸림 -->
+                            
                                 <label for="name">이름</label>
                                 <input
                                     class="mb10 mt10"
@@ -134,7 +131,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <script src="/js/main.js"></script>
             <script src="/js/test.js"></script>
         </div>
