test : 메인페이지 주석

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="container">
-            <header>
+            <header style="box-shadow: 2px 2px 4px #4444">
                 <div class="wrap">
                     <div class="headerWrap flex-box flex-between flex-middle">
                         <div class="logoWrap">
@@ -26,12 +26,23 @@
                             <li class="ml30 dark"><span class="material-symbols-outlined"> dark_mode </span></li>
                         </ul>
                     </div>
-                    <!--  -->
                 </div>
             </header>
 
             <main>
-                <div class="wrap">
+                <h1
+                    style="
+                        height: 100vh;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 30px;
+                    "
+                >
+                    공사중
+                </h1>
+                <!-- <div class="wrap">
                     <div style="height: 200px"></div>
                     <div class="cungcungdda">
                         <div><span id="order">1</span>번째 참가자</div>
@@ -39,7 +50,7 @@
                         <input id="wordInput" type="text" />
                         <button class="clickBtn">입력</button>
                     </div>
-                </div>
+                </div> -->
             </main>
             <footer></footer>
             <div id="loginFormModal" class="notVb">
