--- a/study/caculate.html
+++ b/study/caculate.html
@@ -63,13 +63,36 @@
         const clickNum = (number) => () => {
             if (!operator) {
                 numOne += number;
-                $result.value = numOne;
-            } else {
-                numTwo += number;
-                $result.value = numTwo;
+                $result.value += number;
+                return;
             }
+            if (!numTwo) {
+                $result.value = '';
+            }
+            numTwo += number;
+            $result.value += number;
         };
         const clickOperator = (op) => () => {
+            if (numTwo) {
+                switch (operator) {
+                    case '+':
+                        $result.value = parseInt(numOne) + parseInt(numTwo);
+                        break;
+                    case '-':
+                        $result.value = numOne - numTwo;
+                        break;
+                    case '*':
+                        $result.value = numOne * numTwo;
+                        break;
+                    case '/':
+                        $result.value = numOne / numTwo;
+                        break;
+                    default:
+                        break;
+                }
+                numOne = $result.value;
+                numTwo = '';
+            }
             if (numOne) {
                 operator = op;
                 $operator.value = op;
@@ -78,7 +101,21 @@
             }
         };
         const clickCalculate = () => {
-            if ((operator, numOne, numTwo)) {
+            // switch => if/else if
+            // if (operator) {
+            //     if (operator === '+') {
+            //         $result.value = parseInt(numOne) + parseInt(numTwo);
+            //     } else if (operator === '-') {
+            //         $result.value = numOne - numTwo;
+            //     } else if (operator === '/') {
+            //         $result.value = numOne / numTwo;
+            //     } else if (operator === '*') {
+            //         $result.value = numOne * numTwo;
+            //     } else {
+            //         return;
+            //     }
+            // }
+            if (numTwo) {
                 switch (operator) {
                     case '+':
                         $result.value = parseInt(numOne) + parseInt(numTwo);
@@ -86,17 +123,21 @@
                     case '-':
                         $result.value = numOne - numTwo;
                         break;
-                    case '/':
-                        $result.value = numOne / numTwo;
-                        break;
                     case '*':
                         $result.value = numOne * numTwo;
+                        break;
+                    case '/':
+                        $result.value = numOne / numTwo;
                         break;
                     default:
                         break;
                 }
+                $operator.value = '';
+                numOne = $result.value;
+                operator = '';
+                numTwo = '';
             } else {
-                alert('식이 올바르지 않습니다.');
+                alert('숫자를 먼저 입력하세요.');
             }
         };
         for (let i = 0; i < 10; i++) {
@@ -110,7 +151,6 @@
         $('#clear').addEventListener('click', () => {
             numOne = '';
             numTwo = '';
-            result = '';
             operator = '';
             $result.value = '';
             $operator.value = '';
