--- a/index.html
+++ b/index.html
@@ -29,29 +29,7 @@
                 </div>
             </header>
 
-            <main>
-                <h1
-                    style="
-                        height: 100vh;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        font-size: 30px;
-                    "
-                >
-                    공사중
-                </h1>
-                <!-- <div class="wrap">
-                    <div style="height: 200px"></div>
-                    <div class="cungcungdda">
-                        <div><span id="order">1</span>번째 참가자</div>
-                        <div>제시어 : <span id="word"></span></div>
-                        <input id="wordInput" type="text" />
-                        <button class="clickBtn">입력</button>
-                    </div>
-                </div> -->
-            </main>
+            <main></main>
             <footer></footer>
             <div id="loginFormModal" class="notVb">
                 <div class="loginBg">
@@ -74,75 +52,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div id="joinFormModal hide">
-                <div class="joinBg">
-                    <div class="joinForm">
-                        <h2 class="mb30 mt20 t_center">회원 가입</h2>
-                        <form>
-                            <div class="input-group">
-                            
-                                <label for="name">이름</label>
-                                <input
-                                    class="mb10 mt10"
-                                    id="name"
-                                    type="text"
-                                    name="fullname"
-                                    placeholder="이름"
-                                    required
-                                />
-                                <div class="flex-box flex-between flex-middle">
-                                    <p class="hide t_danger">올바른 이름이 아닙니다</p>
-                                </div>
-                            </div>
-                            <div class="input-group">
-                                <label for="userId">아이디</label>
-                                <input
-                                    class="mb10 mt10"
-                                    id="userId"
-                                    type="text"
-                                    name="email"
-                                    placeholder="아이디"
-                                    required
-                                />
-                                <div class="flex-box flex-between flex-middle">
-                                    <p class="hide t_danger">올바른 아이디가 아닙니다</p>
-                                </div>
-                            </div>
 
-                            <div class="input-group">
-                                <label for="userPw">비밀번호</label>
-                                <input
-                                    class="mb10 mt10 joinPwFirst"
-                                    id="userPw"
-                                    type="password"
-                                    name="password"
-                                    placeholder="비밀번호"
-                                    required
-                                />
-                                <input
-                                    class="joinPwTwo"
-                                    type="password"
-                                    name="password"
-                                    placeholder="비밀번호 확인"
-                                    required
-                                />
-                                <div class="mt10 flex-box flex-between flex-middle">
-                                    <p class="t_danger t_pwCheck"></p>
-                                    <input
-                                        class="pwCheck"
-                                        type="button"
-                                        value="비밀번호 확인"
-                                        style="border: 1px solid black !important; font-size: 12px; padding: 2px"
-                                    />
-                                </div>
-                            </div>
-                            <div class="t_center mt30" style="margin-bottom: 20px">
-                                <button type="submit">가입하기</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div> -->
             <script src="/js/main.js"></script>
             <script src="/js/test.js"></script>
         </div>
