feat : 리팩토링 하는중

--- a/study/rsp/rsp.html
+++ b/study/rsp/rsp.html
@@ -4,9 +4,9 @@
         <title>가위바위보</title>
         <style>
             #computer {
-                width: 142px;
+                width: 162px;
                 height: 200px;
-                margin-bottom: 20px;
+                margin: 50px 0;
             }
         </style>
     </head>
