--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 </div>
             </div>
             <script src="/js/main.js"></script>
+            <script src="/study/test.js"></script>
         </div>
     </body>
 </html>
