feat : 필요없는 것 제거

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <section></section>
                 </div>
             </main>
-            <footer></footer>
+            <footer><div class="wrap"></div></footer>
             <div id="loginFormModal" class="notVb">
                 <div class="loginBg">
                     <div class="loginForm t_center">
