--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                                 </ul>
                             </div>
                         </div>
+                        <a href="./study/caculate/caculate.html">테스트</a>
+                        <a href="./study/card/card.html">테스트</a>
                     </section>
                     <section></section>
                     <section></section>
