--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                                 <img id="logo" src="/images/austin.png" alt="logo" />
                             </div>
                             <ul id="nav" class="flex-box flex-middle">
-                                <li class="t_big">프로젝트</li>
+                                <li class="t_big">JS Game</li>
+                                <li class="t_big ml30">프로젝트</li>
                                 <li class="loginBtn ml30 t_big">로그인</li>
                                 <li class="ml30 light hide">
                                     <span class="material-symbols-outlined"> light_mode </span>
@@ -50,17 +51,7 @@
 
                     <section id="project">
                         <div class="sectionWrap">
-                            <div class="projectWrap flex-box">
-                                <ul class="mainProject">
-                                    <li class="projectMain"></li>
-                                </ul>
-                                <ul class="rightProject flex-box flex-wrap">
-                                    <li class="projectList"></li>
-                                    <li class="projectList"></li>
-                                    <li class="projectList"></li>
-                                    <li class="projectList"></li>
-                                </ul>
-                            </div>
+                            <div class="projectWrap flex-box"></div>
                         </div>
                         <a href="./study/caculate/caculate.html">테스트</a>
                         <a href="./study/card/card.html">테스트</a>
@@ -71,6 +62,28 @@
                 </div>
             </main>
             <footer><div class="wrap"></div></footer>
+            <div id="gameModal">
+                <ul class="rightProject flex-box flex-wrap">
+                    <li class="projectList">
+                        <img src="./images/tictactoe.webp" alt="tictactoe" />
+                        <div class="overlay">
+                            <h1>틱택토</h1>
+                        </div>
+                    </li>
+                    <li class="projectList ml20">
+                        <img src="./images/caculate.png" alt="caculate" />
+                        <div class="overlay">계산기</div>
+                    </li>
+                    <li class="projectList ml20">
+                        <img src="./images/mine.png" alt="mine-search" />
+                        <div class="overlay">지뢰 찾기</div>
+                    </li>
+                    <li class="projectList ml20">
+                        <img src="./images/rsp.png" alt="rsp" />
+                        <div class="overlay">가위 바위 보</div>
+                    </li>
+                </ul>
+            </div>
             <div id="loginFormModal" class="notVb">
                 <div class="loginBg">
                     <div class="loginForm t_center">
